--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,9 @@
 *.app
 
 /build
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
