--- a/.gitignore
+++ b/.gitignore
@@ -326,3 +326,14 @@ TSWLatexianTemp*
 
 # Makeindex log files
 *.lpz
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
