--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@
 *.out
 *.app
 
-/build/*
+build/*
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
@@ -407,3 +407,4 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+.idea/*
