--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,11 @@ branches:
   only:
     - development
 
+addons:
+  apt:
+    packages:
+      - doxygen
+
 script:
   - cd study
   - doxygen Doxyfile
